--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: MHBiMod
+Package: mobirep
 Title: Models Bivariate Dependence and Produces Bivariate Return Periods
 Version: 0.0.0.9000
 Authors@R: 
@@ -25,6 +25,9 @@ Imports:
     lattice,
     texmex,
     SpatialExtremes,
+    zoo,
+    copula
 Suggests: 
     knitr
 VignetteBuilder: knitr
+
