--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(curve.funct.b)
 export(densi.curv.cop)
 export(densi.curv.em)
 export(digit.curves.p)
+import(ks)
 importFrom(grDevices,contourLines)
 importFrom(graphics,abline)
 importFrom(graphics,contour)
