--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(Bv.LT.Dep)
 export(Cond.mod.ap)
 export(JT.KDE.ap)
 export(Margins.mod)
+export(calcCondExceedanceCurve)
+export(calcJointExceedanceCurve)
 export(curve.funct)
 export(curve.funct.a)
 export(curve.funct.b)
