--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,9 @@ export(digit.curves.p)
 import(ks)
 import(lattice)
 import(zoo)
+importFrom(copBasic,surfuncCOP)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,ggplot)
 importFrom(grDevices,contourLines)
 importFrom(graphics,abline)
 importFrom(graphics,contour)
@@ -34,4 +37,8 @@ importFrom(stats,quantile)
 importFrom(stats,rnorm)
 importFrom(stats,spline)
 importFrom(stats,uniroot)
+importFrom(texmex,chi)
+importFrom(texmex,evm)
+importFrom(texmex,mex)
+importFrom(viridis,viridis)
 importFrom(zoo,na.approx)
