--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     person(given = "Alois",
            family = "Tilloy",
            role = c("aut", "cre"),
-           email = "alois.tilloy@kcl.ac.uk",
+           email = "alois.tilloy@ec.europa.eu",
            comment = c(ORCID = "https://orcid.org/0000-0002-5881-0642"))
 Description: Models the dependence between two variables in the extremes, identifies most 
     relevant models among six models: the conditional extremes model, the Jt-KDE model 
